[tool.poetry]
name = "planetarium"
version = "0.1.0"
description = "Benchmark framework for evaluating LLMs performance in the context of PDDL code generation."
authors = [
  "Max Zuo <zuo@brown.edu>",
  "Francisco J. Piedrahita-Velez <fpiedrah@brown.edu>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.2.1"
pddl = {git = "https://github.com/maxzuo/pddl.git"}
pyyaml = "^6.0.1"
jinja2 = "^3.1.4"
rustworkx = "^0.14.2"
matplotlib = "^3.9.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"
pytest = "^7.4.3"
mypy = "^1.7.1"
pytest-cov = "^4.1.0"
pytest-timeout = "^2.2.0"
black = {extras = ["jupyter"], version = "^24.4.2"}


[tool.poetry.group.all.dependencies]
lark = "^1.1.9"
vllm = "^0.5.0.post1"
python-dotenv = "^1.0.1"
datasets = "^2.20.0"
peft = "^0.11.1"
trl = "^0.9.4"
bitsandbytes = "^0.43.1"
openai = "^1.35.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
allow_redefinition = true
ignore_missing_imports = true
